--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "prisma-next-image-upload",
+  "name": "habit-hacker-fe",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -19,6 +19,7 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
+    "ethers": "^5.7.2",
     "firebase": "^9.19.1",
     "formidable": "^2.1.1",
     "next": "^13.2.4",
@@ -26,7 +27,8 @@
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "sass": "^1.57.1",
-    "typescript": "^5.0.3"
+    "typescript": "^5.0.3",
+    "wagmi": "^0.12.10"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
