--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@emotion/styled": "^11.10.5",
     "@prisma/client": "^4.12.0",
     "@svgr/webpack": "^6.5.1",
+    "@types/three": "^0.150.1",
     "@typescript-eslint/eslint-plugin": "^5.48.1",
     "@typescript-eslint/parser": "^5.48.1",
     "axios": "^1.3.4",
@@ -27,6 +28,7 @@
     "react-dom": "^18.2.0",
     "recoil": "^0.7.7",
     "sass": "^1.57.1",
+    "three": "^0.151.3",
     "typescript": "^5.0.3",
     "wagmi": "^0.12.10"
   },
