--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@chakra-ui/react": "^2.4.9",
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
+    "@metamask/sdk": "^0.1.0",
     "@prisma/client": "^4.12.0",
     "@svgr/webpack": "^6.5.1",
     "@types/three": "^0.150.1",
@@ -20,7 +21,6 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.0",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "ethers": "^5.7.2",
     "firebase": "^9.19.1",
     "formidable": "^2.1.1",
     "next": "^13.2.4",
@@ -29,8 +29,7 @@
     "recoil": "^0.7.7",
     "sass": "^1.57.1",
     "three": "^0.151.3",
-    "typescript": "^5.0.3",
-    "wagmi": "^0.12.10"
+    "typescript": "^5.0.3"
   },
   "devDependencies": {
     "@types/node": "18.15.11",
